# plasma_spectra

./: .gitignore  ArI.txt  ArI_data.csv  HeI.txt  HeI_data.csv  README.md  code.ipynb  main.py  pyproject.toml
ionization_speed/: code.ipynb
