[project]
name = "plasma-spectra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.6",
    "jupyterlab-git>=0.52.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scienceplots>=2.2.1",
    "scipy>=1.15.3",
]
